--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -89,103 +90,47 @@
        "      <td>04/12/19 14:38</td>\n",
        "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18378</th>\n",
-       "      <td>194090</td>\n",
-       "      <td>Google Phone</td>\n",
-       "      <td>1</td>\n",
-       "      <td>600</td>\n",
-       "      <td>04/08/19 17:11</td>\n",
-       "      <td>177 Jackson St, Los Angeles, CA 90001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18379</th>\n",
-       "      <td>194091</td>\n",
-       "      <td>AA Batteries (4-pack)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>04/15/19 16:02</td>\n",
-       "      <td>311 Forest St, Austin, TX 73301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18380</th>\n",
-       "      <td>194092</td>\n",
-       "      <td>AAA Batteries (4-pack)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>04/28/19 14:36</td>\n",
-       "      <td>347 Sunset St, San Francisco, CA 94016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18381</th>\n",
-       "      <td>194093</td>\n",
-       "      <td>AA Batteries (4-pack)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>04/14/19 15:09</td>\n",
-       "      <td>835 Lake St, Portland, OR 97035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18382</th>\n",
-       "      <td>194094</td>\n",
-       "      <td>Lightning Charging Cable</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>04/18/19 11:08</td>\n",
-       "      <td>354 North St, Boston, MA 02215</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>18383 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Order ID                     Product Quantity Ordered Price Each  \\\n",
-       "0       176558        USB-C Charging Cable                2      11.95   \n",
-       "1          NaN                         NaN              NaN        NaN   \n",
-       "2       176559  Bose SoundSport Headphones                1      99.99   \n",
-       "3       176560                Google Phone                1        600   \n",
-       "4       176560            Wired Headphones                1      11.99   \n",
-       "...        ...                         ...              ...        ...   \n",
-       "18378   194090                Google Phone                1        600   \n",
-       "18379   194091       AA Batteries (4-pack)                1       3.84   \n",
-       "18380   194092      AAA Batteries (4-pack)                2       2.99   \n",
-       "18381   194093       AA Batteries (4-pack)                1       3.84   \n",
-       "18382   194094    Lightning Charging Cable                1      14.95   \n",
+       "  Order ID                     Product Quantity Ordered Price Each  \\\n",
+       "0   176558        USB-C Charging Cable                2      11.95   \n",
+       "1      NaN                         NaN              NaN        NaN   \n",
+       "2   176559  Bose SoundSport Headphones                1      99.99   \n",
+       "3   176560                Google Phone                1        600   \n",
+       "4   176560            Wired Headphones                1      11.99   \n",
        "\n",
-       "           Order Date                        Purchase Address  \n",
-       "0      04/19/19 08:46            917 1st St, Dallas, TX 75001  \n",
-       "1                 NaN                                     NaN  \n",
-       "2      04/07/19 22:30       682 Chestnut St, Boston, MA 02215  \n",
-       "3      04/12/19 14:38    669 Spruce St, Los Angeles, CA 90001  \n",
-       "4      04/12/19 14:38    669 Spruce St, Los Angeles, CA 90001  \n",
-       "...               ...                                     ...  \n",
-       "18378  04/08/19 17:11   177 Jackson St, Los Angeles, CA 90001  \n",
-       "18379  04/15/19 16:02         311 Forest St, Austin, TX 73301  \n",
-       "18380  04/28/19 14:36  347 Sunset St, San Francisco, CA 94016  \n",
-       "18381  04/14/19 15:09         835 Lake St, Portland, OR 97035  \n",
-       "18382  04/18/19 11:08          354 North St, Boston, MA 02215  \n",
-       "\n",
-       "[18383 rows x 6 columns]"
+       "       Order Date                      Purchase Address  \n",
+       "0  04/19/19 08:46          917 1st St, Dallas, TX 75001  \n",
+       "1             NaN                                   NaN  \n",
+       "2  04/07/19 22:30     682 Chestnut St, Boston, MA 02215  \n",
+       "3  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  \n",
+       "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"C:\\Test\\Sales data\\Sales_April_2019.csv\")\n",
-    "display(df)"
+    "#df = pd.read_csv(\"C:\\Test\\Sales data\\Sales_April_2019.csv\")\n",
+    "files = [file for file in os.listdir(\".\\Sales data\")]\n",
+    "all_month_data = pd.DataFrame()\n",
+    "for file in files:\n",
+    "    df = pd.read_csv(\".\\sales data/\"+file)\n",
+    "    all_month_data = pd.concat([all_month_data,df])\n",
+    "all_month_data.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
